Plesk sub-domains are now imported as Virtualmin sub-servers.
Updated the Horde script installer to version 3.2, and all its associated sub-applications to their latest releases.
The $DNS_SERIAL variable can be used in templates, as an initial serial for new domains.
When a domain's home directory is changed, update session.save_path in its php.ini files to match.
Improved the migration of Plesk mailbox aliases and forwarding, and protected directories.
Fixed support for international domain names using non-european character sets (like Chinese and Cyrillic) in newer versions of Perl.
Completely re-designed the Virtualmin backup UI, to support multiple backup schedules and allow domain owners and resellers to schedule their own backups (subject to limits configured by the master administrator). Domain owners can now also restore backups of their home directories and databases. Backups can either be full or incremental, to speed up the process of backing up large but infrequently-changing sites.
By default, new DNS zones only allow localhost, hosts on the local network and known slaves to transfer records.
All text in the Virtualmin user interface is now available in Dutch, thanks to Gandyman.
The remote hosts from which connections to MySQL are allowed can be easily edited on a per-domain basis on the Edit Databases page, in the new 'Remote hosts' tab. These apply to the domain owner and any mailboxes with database access. The modify-database-hosts.pl command can also be used to edit them from the shell or API.
Old local file and S3 backups created using date-based filenames can now be automatically deleted if older than a selected number of days, configurable on the Scheduled Backups page.
---- Changes since 3.58 ----
The PHP modules and Pear modules available for each domain are now displayed on the Website Options page.