@@ -3,7 +3,7 @@ desc=Virtualmin Virtual Servers
 category=servers
 depends=net useradmin quota acl cron mailboxes phpini 1.420
 os_support=*-linux macos freebsd openbsd solaris
-version=3.58
+version=3.59
 desc_de=Virtualmin Virtuelle Server
 desc_fr=Serveurs Virtuels Virtualmin
 readonly=1
